@@ -117,9 +117,9 @@ static uint64_t rpc_user_time[RPC_USER_SIZE] = { 0 };
 
 static char *slurmd_config_files[] = {
 	"slurm.conf", "acct_gather.conf", "cgroup.conf",
-	"cgroup_allowed_devices_file.conf", "cli_filter.lua",
-	"ext_sensors.conf", "gres.conf", "helpers.conf", "job_container.conf",
-	"knl_cray.conf", "oci.conf", "plugstack.conf", "topology.conf", NULL
+	"cli_filter.lua", "ext_sensors.conf", "gres.conf", "helpers.conf",
+	"job_container.conf", "knl_cray.conf", "oci.conf", "plugstack.conf",
+	"topology.conf", NULL
 };
 
 static char *client_config_files[] = {
